--- a/csharp/Platform.Data.Doublets.Sequences/Platform.Data.Doublets.Sequences.csproj
+++ b/csharp/Platform.Data.Doublets.Sequences/Platform.Data.Doublets.Sequences.csproj
@@ -25,7 +25,8 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
-    <PackageReleaseNotes>IList<![CDATA[<]]>TLinkAddress<![CDATA[>]]> is made nullable everywhere except in IConverter typed parameters.
+    <PackageReleaseNotes>Sequences class and its dependents are temporarily disabled.
+IList<![CDATA[<]]>TLinkAddress<![CDATA[>]]> is made nullable everywhere except in IConverter typed parameters.
 .NET 6 support is added.
 BigInteger converters bug is fixed. Now any type can be used as typed parameter.
 Platform.Data.Doublets dependency is updated from 0.7.0 to 0.13.1.
