--- a/csharp/Platform.Data.Doublets.Sequences/Platform.Data.Doublets.Sequences.csproj
+++ b/csharp/Platform.Data.Doublets.Sequences/Platform.Data.Doublets.Sequences.csproj
@@ -4,7 +4,7 @@
     <Description>LinksPlatform's Platform.Data.Doublets.Sequences Class Library</Description>
     <Copyright>konard, FreePhoenix888</Copyright>
     <AssemblyTitle>Platform.Data.Doublets.Sequences</AssemblyTitle>
-    <VersionPrefix>0.1.1</VersionPrefix>
+    <VersionPrefix>0.1.2</VersionPrefix>
     <Authors>konard, FreePhoenix888</Authors>
     <TargetFrameworks>net472;netstandard2.0;netstandard2.1;net5;net6</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -25,9 +25,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
-    <PackageReleaseNotes>Platform.Data.Doublets dependency is updated from 0.13.1 to 0.13.4.
-UnicodeSequenceToStringConverter constructor is updated.
-UnicodeSequenceMatcher is added.</PackageReleaseNotes>
+    <PackageReleaseNotes>Byte converters are added.</PackageReleaseNotes>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
