--- a/csharp/Platform.Data.Doublets.Sequences/Platform.Data.Doublets.Sequences.csproj
+++ b/csharp/Platform.Data.Doublets.Sequences/Platform.Data.Doublets.Sequences.csproj
@@ -25,13 +25,14 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <PackageReleaseNotes>Target framework is changed to net7.
-Generic math is used therefore generic constraints are changed.</PackageReleaseNotes>
+Generic math is used therefore generic constraints are changed.
+Platform.Data.Doublets dependency is updated to 0.17.0.</PackageReleaseNotes>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Platform.Data.Doublets" Version="0.13.4" />
+    <PackageReference Include="Platform.Data.Doublets" Version="0.17.0" />
     <PackageReference Include="Platform.Data.Sequences" Version="0.2.1" />
   </ItemGroup>
 
