--- a/csharp/Platform.Data.Doublets.Sequences/Platform.Data.Doublets.Sequences.csproj
+++ b/csharp/Platform.Data.Doublets.Sequences/Platform.Data.Doublets.Sequences.csproj
@@ -4,7 +4,7 @@
     <Description>LinksPlatform's Platform.Data.Doublets.Sequences Class Library</Description>
     <Copyright>konard, FreePhoenix888</Copyright>
     <AssemblyTitle>Platform.Data.Doublets.Sequences</AssemblyTitle>
-    <VersionPrefix>0.5.0</VersionPrefix>
+    <VersionPrefix>0.5.1</VersionPrefix>
     <Authors>konard, FreePhoenix888</Authors>
     <TargetFramework>net7</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -24,13 +24,13 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
-    <PackageReleaseNotes>NumberToLongRawNumberSequenceConverter generyc type constraints are changed.</PackageReleaseNotes>
+    <PackageReleaseNotes>Platform.Data.Doublets dependency is updated to 0.17.1.</PackageReleaseNotes>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Platform.Data.Doublets" Version="0.17.0" />
+    <PackageReference Include="Platform.Data.Doublets" Version="0.17.1" />
     <PackageReference Include="Platform.Data.Sequences" Version="0.2.1" />
   </ItemGroup>
 
