--- a/.github/workflows/csharp.yml
+++ b/.github/workflows/csharp.yml
@@ -32,7 +32,10 @@ jobs:
       - uses: actions/checkout@v1
         with:
           submodules: true
-      - uses: nuget/setup-nuget@v1
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0.x'
       - name: Publish NuGet package to GitHub Package Registry
         run: |
           dotnet build -c Release
