--- a/.github/workflows/csharp.yml
+++ b/.github/workflows/csharp.yml
@@ -68,26 +68,28 @@ jobs:
         run: |
           dotnet nuget push ./nupkgs/*.nupkg \
             --source "GitHub" \
-            --api-key "${{ secrets.GITHUB_TOKEN }}"
+            --api-key "${{ secrets.GITHUB_TOKEN }}" \
+            --skip-duplicate
         env:
           NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   pusnToNuget:
     runs-on: ubuntu-latest
     needs: test
     steps:
-    - uses: actions/checkout@v1
-      with:
-        submodules: true
-    - name: Read project information
-      run: |
-        export REPOSITORY_NAME=$(basename ${{ github.repository }})
-        wget "$SCRIPTS_BASE_URL/read_csharp_package_info.sh"
-        bash ./read_csharp_package_info.sh
-    - name: Publish NuGet package
-      run: |
-        export REPOSITORY_NAME=$(basename ${{ github.repository }})
-        wget "$SCRIPTS_BASE_URL/push-csharp-nuget.sh"
-        bash ./push-csharp-nuget.sh
+      - uses: actions/checkout@v1
+        with:
+          submodules: true
+      - name: Read project information
+        run: |
+          export REPOSITORY_NAME=$(basename ${{ github.repository }})
+          wget "$SCRIPTS_BASE_URL/read_csharp_package_info.sh"
+          bash ./read_csharp_package_info.sh
+      - name: Publish NuGet package
+        run: |
+          export REPOSITORY_NAME=$(basename ${{ github.repository }})
+          wget "$SCRIPTS_BASE_URL/push-csharp-nuget.sh"
+          bash ./push-csharp-nuget.sh
   publiseRelease:
     runs-on: ubuntu-latest
     needs: test
@@ -114,54 +116,54 @@ jobs:
     outputs:
       isCsFilesChanged: ${{ steps.setIsCsFilesChangedOutput.outputs.isCsFilesChanged }}
     steps:
-    - uses: actions/checkout@v3
-      with:
-       fetch-depth: 0
-    - name: Get changed files using defaults
-      id: changed-files
-      uses: tj-actions/changed-files@v21
-    - name: Set output isCsFilesChanged
-      id: setIsCsFilesChangedOutput
-      run: |
-        isCsFilesChanged='false'
-        echo "Changed files: ${{ steps.changed-files.outputs.all_changed_files }}"
-        for changedFile in ${{ steps.changed-files.outputs.all_changed_files }}; do
-          if [[ $changedFile == *.cs ]]
-          then
-            echo "isCsFilesChanged='true'"
-            isCsFilesChanged='true'
-          fi
-        done
-        echo "::set-output name=isCsFilesChanged::${isCsFilesChanged}"
-        echo "isCsFilesChanged: ${isCsFilesChanged}"
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Get changed files using defaults
+        id: changed-files
+        uses: tj-actions/changed-files@v21
+      - name: Set output isCsFilesChanged
+        id: setIsCsFilesChangedOutput
+        run: |
+          isCsFilesChanged='false'
+          echo "Changed files: ${{ steps.changed-files.outputs.all_changed_files }}"
+          for changedFile in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            if [[ $changedFile == *.cs ]]
+            then
+              echo "isCsFilesChanged='true'"
+              isCsFilesChanged='true'
+            fi
+          done
+          echo "::set-output name=isCsFilesChanged::${isCsFilesChanged}"
+          echo "isCsFilesChanged: ${isCsFilesChanged}"
   generatePdfWithCode:
     runs-on: ubuntu-latest
     needs: [findChangedCsFiles]
     if: ${{ needs.findChangedCsFiles.outputs.isCsFilesChanged == 'true' }}
     steps:
-    - uses: actions/checkout@v1
-      with:
-        submodules: true
-    - name: Generate PDF with code
-      run: |
-        export REPOSITORY_NAME=$(basename ${{ github.repository }})
-        wget "$SCRIPTS_BASE_URL/format-csharp-files.py"
-        wget "$SCRIPTS_BASE_URL/format-csharp-document.sh"
-        wget "$SCRIPTS_BASE_URL/generate-csharp-pdf.sh"
-        bash ./generate-csharp-pdf.sh
+      - uses: actions/checkout@v1
+        with:
+          submodules: true
+      - name: Generate PDF with code
+        run: |
+          export REPOSITORY_NAME=$(basename ${{ github.repository }})
+          wget "$SCRIPTS_BASE_URL/format-csharp-files.py"
+          wget "$SCRIPTS_BASE_URL/format-csharp-document.sh"
+          wget "$SCRIPTS_BASE_URL/generate-csharp-pdf.sh"
+          bash ./generate-csharp-pdf.sh
   publishDocumentation:
     runs-on: ubuntu-latest
     needs: [findChangedCsFiles]
     if: ${{ needs.findChangedCsFiles.outputs.isCsFilesChanged == 'true' }}
     steps:
-    - uses: actions/checkout@v1
-      with:
-        submodules: true
-    - name: Publish documentation to gh-pages branch
-      run: |
-        export REPOSITORY_NAME=$(basename ${{ github.repository }})
-        wget "$SCRIPTS_BASE_URL/docfx.json"
-        wget "$SCRIPTS_BASE_URL/filter.yml"
-        wget "$SCRIPTS_BASE_URL/toc.yml"
-        wget "$SCRIPTS_BASE_URL/publish-csharp-docs.sh"
-        bash ./publish-csharp-docs.sh
+      - uses: actions/checkout@v1
+        with:
+          submodules: true
+      - name: Publish documentation to gh-pages branch
+        run: |
+          export REPOSITORY_NAME=$(basename ${{ github.repository }})
+          wget "$SCRIPTS_BASE_URL/docfx.json"
+          wget "$SCRIPTS_BASE_URL/filter.yml"
+          wget "$SCRIPTS_BASE_URL/toc.yml"
+          wget "$SCRIPTS_BASE_URL/publish-csharp-docs.sh"
+          bash ./publish-csharp-docs.sh
